--- a/build.gradle
+++ b/build.gradle
@@ -16,15 +16,16 @@ configurations {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtime group: 'org.hsqldb', name: 'hsqldb', version: '2.5.1'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'commons-io:commons-io:2.8.0'
     implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.23'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
