--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
     implementation group: 'com.google.guava', name: 'guava-collections', version: 'r03'
+
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 }
 
 test {
