--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ repositories {
 }
 
 dependencies {
+
+    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -32,6 +34,9 @@ dependencies {
     implementation group: 'com.google.guava', name: 'guava-collections', version: 'r03'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 }
 
 dependencyManagement {
