--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=1111
-
+spring.data.mongodb.auto-index-creation=true
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
