--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=1111
 spring.data.mongodb.auto-index-creation=true
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+spring.data.mongodb.host=${mongo.host}
+spring.data.mongodb.port=${mongo.port}
